[package]
name = "fri_cache"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "helper"
path = "src/helper.rs"


[[bin]]
name = "fri_cache"
path = "src/main.rs"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
bincode = { version = "1.3" }


reqwest = { version = "0.12.12", features = ["blocking", "json"] }
sha3 = { package = "sha3_ce", version = "=0.10.6" }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }



execution_utils = {git = "https://github.com/matter-labs/zksync-airbender" }
base64 = "0.22.1"
